[gd_scene load_steps=61 format=3 uid="uid://c4lpwykasmsdp"]

[ext_resource type="Script" uid="uid://bfm08riuay3e2" path="res://Gameplay/scripts/hero.gd" id="1_j12nt"]
[ext_resource type="Texture2D" uid="uid://cmrvne3ao4jjv" path="res://Assets/Textures/adventurer-Sheet.png" id="2_5m1hg"]
[ext_resource type="FontFile" uid="uid://dp6emwa1le7hg" path="res://Assets/Fonts/Breathe Fire.otf" id="3_wqa0u"]
[ext_resource type="Texture2D" uid="uid://bi5pha7rb6mlm" path="res://Assets/Textures/Sombra.png" id="4_ehfo3"]
[ext_resource type="Texture2D" uid="uid://tgpafgsnynrh" path="res://addons/kenney_particle_pack/flame_04.png" id="5_5m1hg"]
[ext_resource type="AudioStream" uid="uid://ccry3hxadd1o8" path="res://Assets/Sounds/HIT.wav" id="6_wqa0u"]
[ext_resource type="Texture2D" uid="uid://cefbxlu4x4dxw" path="res://addons/kenney_particle_pack/smoke_05.png" id="7_ehfo3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6wa1p"]
radius = 13.0
height = 80.0

[sub_resource type="AtlasTexture" id="AtlasTexture_66oy7"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xl2t"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3knf"]
atlas = ExtResource("2_5m1hg")
region = Rect2(150, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkfpu"]
atlas = ExtResource("2_5m1hg")
region = Rect2(200, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_471xu"]
atlas = ExtResource("2_5m1hg")
region = Rect2(250, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0rah"]
atlas = ExtResource("2_5m1hg")
region = Rect2(300, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnar5"]
atlas = ExtResource("2_5m1hg")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0d3i"]
atlas = ExtResource("2_5m1hg")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei7u6"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ljx"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_e28gu"]
atlas = ExtResource("2_5m1hg")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a861k"]
atlas = ExtResource("2_5m1hg")
region = Rect2(200, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut4xs"]
atlas = ExtResource("2_5m1hg")
region = Rect2(250, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6ab0"]
atlas = ExtResource("2_5m1hg")
region = Rect2(300, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrln1"]
atlas = ExtResource("2_5m1hg")
region = Rect2(0, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3m5o"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqky5"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kuwo"]
atlas = ExtResource("2_5m1hg")
region = Rect2(150, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy4sb"]
atlas = ExtResource("2_5m1hg")
region = Rect2(200, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d5pk"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6ukb"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh0nj"]
atlas = ExtResource("2_5m1hg")
region = Rect2(150, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufffw"]
atlas = ExtResource("2_5m1hg")
region = Rect2(200, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqgh3"]
atlas = ExtResource("2_5m1hg")
region = Rect2(250, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j1t0"]
atlas = ExtResource("2_5m1hg")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b0dt"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6qri"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh8kw"]
atlas = ExtResource("2_5m1hg")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_m53g5"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mnym"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_doo2v"]
atlas = ExtResource("2_5m1hg")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wa1p"]
atlas = ExtResource("2_5m1hg")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmddy"]
atlas = ExtResource("2_5m1hg")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhl10"]
atlas = ExtResource("2_5m1hg")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_v11mi"]
atlas = ExtResource("2_5m1hg")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrue3"]
atlas = ExtResource("2_5m1hg")
region = Rect2(300, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_doo2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66oy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xl2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3knf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkfpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_471xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0rah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnar5")
}],
"loop": false,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0d3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei7u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ljx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e28gu")
}],
"loop": false,
"name": &"Attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a861k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut4xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6ab0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrln1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3m5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqky5")
}],
"loop": false,
"name": &"Corte",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kuwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy4sb")
}],
"loop": true,
"name": &"Dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d5pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6ukb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh0nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufffw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqgh3")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j1t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b0dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6qri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh8kw")
}],
"loop": true,
"name": &"Idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m53g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mnym")
}],
"loop": true,
"name": &"Jump",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_doo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wa1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmddy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhl10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v11mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrue3")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xyx0r"]
radius = 61.0328

[sub_resource type="Animation" id="Animation_xyx0r"]
resource_name = "Hit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(10, 10, 10, 1), Color(10, 10, 10, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ixknr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_egg54"]
_data = {
&"Hit": SubResource("Animation_xyx0r"),
&"RESET": SubResource("Animation_ixknr")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_egg54"]
polygon = PackedVector2Array(0, -27, -9, -20, -12, 1, -14, 27, -12, 45, -8, 49, 2, 54, 11, 48, 18, 36, 14, -18)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egg54"]
bg_color = Color(0.0787108, 0.0732795, 0.335339, 1)
border_width_bottom = 8
border_color = Color(0.00660012, 0.0684249, 0.210932, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3qia"]
bg_color = Color(0.398501, 0.471678, 1, 1)
border_width_bottom = 8
border_color = Color(0.389372, 0.00194044, 0.744664, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wqa0u"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_ehfo3"]
offsets = PackedFloat32Array(0, 0.2, 0.886667, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_5m1hg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.505682, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8a3lt"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_uoj4t"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.127551, 1), 0.0, 0.0, 0, 0, Vector2(0.387755, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_jkok1"]
offsets = PackedFloat32Array(0, 0.335294, 0.676471)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="Curve" id="Curve_ehfo3"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.153061, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8a3lt"]
offsets = PackedFloat32Array(0, 0.270588, 0.558824)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Hero" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_j12nt")
jump_force = -1100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 13)
shape = SubResource("CapsuleShape2D_6wa1p")
debug_color = Color(0, 0.6, 0.7, 0)

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Body"]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_doo2v")
animation = &"Death"
frame = 4
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Area2D"]
position = Vector2(57, 5)
shape = SubResource("CircleShape2D_xyx0r")
disabled = true
debug_color = Color(1, 0.013, 0.014, 0)

[node name="Marker2D" type="Marker2D" parent="Body"]
position = Vector2(52, 0)

[node name="AnimHit" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_egg54")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_egg54")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.6875
anchor_top = 0.91358
anchor_right = 0.978299
anchor_bottom = 0.955247
theme_override_styles/background = SubResource("StyleBoxFlat_egg54")
theme_override_styles/fill = SubResource("StyleBoxFlat_f3qia")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.888021
anchor_top = 0.875
anchor_right = 0.973958
anchor_bottom = 0.930556
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.574)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("3_wqa0u")
theme_override_font_sizes/font_size = 35
text = "Heroe"
metadata/_edit_use_anchors_ = true

[node name="Sombra" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.597)
z_index = -1
texture_filter = 1
position = Vector2(-23, 99)
scale = Vector2(3, 3)
texture = ExtResource("4_ehfo3")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 999)

[node name="AlmaDestrozada" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_wqa0u")
emitting = false
amount = 50
texture = ExtResource("5_5m1hg")
lifetime_randomness = 0.84
emission_shape = 1
emission_sphere_radius = 106.6
gravity = Vector2(0, 0)
angle_min = -104.5
angle_max = 141.0
scale_amount_min = 0.15
scale_amount_max = 0.4
color_ramp = SubResource("Gradient_ehfo3")

[node name="AlmaDestrozadaExplotar" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_wqa0u")
emitting = false
amount = 128
texture = ExtResource("5_5m1hg")
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
lifetime_randomness = 0.78
emission_shape = 1
emission_sphere_radius = 106.6
gravity = Vector2(0, 0)
radial_accel_min = 1428.85
radial_accel_max = 1428.85
radial_accel_curve = SubResource("Curve_5m1hg")
angle_min = -104.5
angle_max = 141.0
scale_amount_min = 0.15
scale_amount_max = 0.4
color_ramp = SubResource("Gradient_ehfo3")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wqa0u")
volume_db = 5.0
pitch_scale = 0.8
bus = &"SFX"

[node name="ParticlesDeath" type="Node2D" parent="."]
z_index = 555

[node name="CPUParticles2D" type="CPUParticles2D" parent="ParticlesDeath"]
material = SubResource("CanvasItemMaterial_8a3lt")
emitting = false
texture = ExtResource("7_ehfo3")
one_shot = true
explosiveness = 1.0
gravity = Vector2(0, 0)
angle_min = -90.5
angle_max = 186.5
scale_amount_min = 0.7
scale_amount_max = 0.9
scale_amount_curve = SubResource("Curve_uoj4t")
color_ramp = SubResource("Gradient_jkok1")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="ParticlesDeath"]
position = Vector2(3, 6)
rotation = 0.410704
scale = Vector2(1, 35)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
local_coords = true
gravity = Vector2(0, 0)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 11.45
scale_amount_max = 11.45
scale_amount_curve = SubResource("Curve_ehfo3")
color_ramp = SubResource("Gradient_8a3lt")

[node name="CPUParticles2D3" type="CPUParticles2D" parent="ParticlesDeath"]
position = Vector2(3, 6)
rotation = 1.85012
scale = Vector2(1, 35)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
local_coords = true
gravity = Vector2(0, 0)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 11.45
scale_amount_max = 11.45
scale_amount_curve = SubResource("Curve_ehfo3")
color_ramp = SubResource("Gradient_8a3lt")

[node name="CPUParticles2D4" type="CPUParticles2D" parent="ParticlesDeath"]
position = Vector2(3, 6)
rotation = 2.9157
scale = Vector2(1, 35)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
local_coords = true
gravity = Vector2(0, 0)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 11.45
scale_amount_max = 11.45
scale_amount_curve = SubResource("Curve_ehfo3")
color_ramp = SubResource("Gradient_8a3lt")

[node name="CPUParticles2D5" type="CPUParticles2D" parent="ParticlesDeath"]
position = Vector2(3, 6)
rotation = 1.19848
scale = Vector2(1, 35)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
local_coords = true
gravity = Vector2(0, 0)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 11.45
scale_amount_max = 11.45
scale_amount_curve = SubResource("Curve_ehfo3")
color_ramp = SubResource("Gradient_8a3lt")

[connection signal="animation_finished" from="Body/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Body/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimHit" to="." method="_on_anim_hit_animation_finished"]
